# bazel-monorepo

./: .gitignore  .golangci.yaml  BUILD.bazel  MODULE.bazel  README.md  go.work  go.work.sum
apps/go/bar/: BUILD.bazel  go.mod  main.go
apps/python/analyzer/: MODULE.bazel
apps/python/analyzer/src/: BUILD.bazel  analyze.py
libs/go/baz/foo/: go.mod
libs/go/baz/foo/pkg/: BUILD.bazel  foo.go
libs/go/foo/: go.mod
libs/go/foo/pkg/: BUILD.bazel  foo.go
