module(
    name = "bazel-monorepo",
    version = "0.0.1",
)

# Declare your Bazel dependencies.
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")


# Set up the Go SDK and configure nogo.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:my_nogo")
