module(
    name = "bazel-monorepo",
    version = "0.0.1",
)

# Declare your Bazel dependencies.
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Set up the Go SDK and configure nogo.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:batyr_nogo")

# Better to have the same version as in go.work file
go_sdk.download(version = "1.23.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# All *direct* Go dependencies of all `go.mod` files referenced by the `go.work` file have to be listed explicitly.
use_repo(
    go_deps,
    "org_golang_x_tools",
)

