load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bar_lib",
    srcs = ["main.go"],
    importpath = "github.com/Sengoku11/bazel-monorepo/apps/go/bar",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/go/baz/foo/pkg",
        "//libs/go/foo/pkg",
    ],
)

go_binary(
    name = "bar",
    embed = [":bar_lib"],
    visibility = ["//visibility:public"],
)
